--- a/3d-projects.html
+++ b/3d-projects.html
@@ -59,7 +59,7 @@
 
   <!-- change the container so content sits above overlay -->
   <div class="container" data-aos="fade-up" data-aos-delay="100" style="position:relative; z-index:1;">
-    <!-- ...existing Resume content below -->
+    <!-- ...existing 3d project content below -->
 
 
       <div class="container section-title" data-aos="fade-up">
