--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Hero Section -->
 <section id="hero" class="hero section" 
     style="
-        background: url('assets/img/bgrender3.png') center center/cover no-repeat !important; 
+        background: url('assets/img/bgrender2.jpg') center center/cover no-repeat !important; 
         min-height: 100vh; 
         position: relative; 
         overflow: hidden;"
